--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <title>Générateur de site LLM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   </head>
   <body>
     <div id="root"></div>
